Add speechart (III)
- Working version
OPEN
- button initially checked
- not repainting for changed lineitems